--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^6.22.2",
     "react-i18next": "^14.1.2",
     "i18next": "^23.11.5",
-    "i18next-browser-languagedetector": "^8.0.0"
+    "i18next-browser-languagedetector": "^8.0.0",
+    "framer-motion": "^11.2.10"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
