--- a/package.json
+++ b/package.json
@@ -15,11 +15,20 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.2",
     "react-i18next": "^14.1.2",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.2",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
+    "toastify-js": "^1.12.0",
+    "web-vitals": "^2.1.4",
+    "@emailjs/browser": "^4.3.3",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.1.1",
     "i18next": "^23.11.5",
-    "i18next-browser-languagedetector": "^8.0.0",
-    "react-icons": "^5.0.1"
+    "i18next-browser-languagedetector": "^8.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
